Adding all files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="dot">.</string>
     <string name="C">c</string>
     <string name="equal">=</string>
+    //testing
 
     <string name="Resultedits">results edits</string>
 
